      with the latest changes made in their own repositories [fjossandon]
    * General synching of files with the master branch [fjossandon]
    * Fixed tests failing in Windows because of using Linux commands [fjossandon]
    * Closed many open filehandles that prevented temporary files deletion [fjossandon]
    * Fixed broken MeSH parser [fjossandon]

1.6.923
    
    * Major Windows support updates! [fjossandon]
    * MAKER update to allow for stricter standard codon table [cjfields]
    * Better support for circular sequences [fjossandon]
    * Fixes for some complex location types [fjossandon]
    * Address CONTIG bug in GenBank format, bug #3448 [cjfields]
    * Fix bug #2978 related to BLAST report type [fjossandon]
    * Deobfuscator fixes [DaveMessina]

1.6.922

    * Address CPAN test failures [cjfields]
    * Add BIOPROJECT support for Genbank files [hyphaltip]
    * Better regex support for HMMER3 output [bosborne]

1.6.921

    * Minor update to address CPAN test failures

1.6.920

    * Remove Bio::Biblio and related files [carandraug]
      - this cause version clashes with an independently-released
        version of Bio::Biblio

1.6.910

    [New features]

    * Hash randomization fixes for perl 5.18.x
      - Note: at least one module (Bio::Map::Physical) still has a failing test;
        this is documented in bug #3446 and has been TODO'd; we will be pulling
        Bio::Map and similar modules out of core into separate distributions in the
        1.7.x release series [cjfields]

    [New features]

    * Bio::Seq::SimulatedRead
        - New module to represent reads taken from other sequences [fangly]
    * Bio::Root::Root
        - Support of Clone::Fast as a faster cloning alternative [fangly]
    * Bio::Root::IO
        - Moved the format() and variant() methods from Bio::*IO modules to
          Bio::Root::IO [fangly]
        - Can now use format() to get the type of IO format in use [fangly]
    * Bio::Tools::IUPAC